# gemini-cost

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  normalize.rs  pricing.rs  usage.rs
tests/: integration.rs
